# Folio

./: .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: troubleshooting.md
docs/prd/: 01-mvp-prd.md
docs/research/: 00-overview.md  01-notion-features.md  02-notion-design-spec.md  03-competitive-landscape.md
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  db.rs  lib.rs  media.rs  prosemirror.rs  registry.rs  schema.rs
src-tauri/src/export/: backup.rs  html.rs  markdown.rs  mod.rs  workspace.rs
src-tauri/src/import/: csv.rs  html.rs  markdown.rs  mod.rs  notion_zip.rs
src/components/: AboutModal.tsx  EmojiPicker.tsx  HistoryModal.tsx  ImportExportModal.tsx  PageTreeNode.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  TrashModal.tsx  WorkspaceSwitcherModal.tsx
src/components/database/: DatabaseView.tsx  FilterBar.tsx  FilterEditor.tsx  GroupMenu.tsx  LinkedDatabaseBlock.tsx  LinkedDatabasePicker.tsx  PropertyCells.tsx  PropertyMenu.tsx  RowPropertyPanel.tsx  ViewTabs.tsx  ViewTypePlaceholder.tsx  filterEngine.ts  linkedDatabaseNode.ts  useViewTabs.ts
src/components/ui/: Popover.tsx
src/editor/: Editor.tsx  slashCommands.ts
src/editor/components/: BlockDragHandle.tsx  BlockMenu.tsx  BubbleToolbar.tsx  FindBar.tsx  SlashMenu.tsx
src/editor/extensions/: Bookmark.ts  BookmarkView.tsx  Callout.ts  Column.ts  Embed.ts  EmbedView.tsx  Equation.tsx  EquationView.tsx  FormulaPopover.tsx  Image.ts  ImageView.tsx  InlineMath.tsx  InlineMathView.tsx  KeyboardShortcuts.ts  SlashCommand.ts  SubPage.ts  SubPageView.tsx  Toggle.ts
src/i18n/: config.ts
src/i18n/locales/: en.json  (+1 more)
src/lib/: dbActiveView.ts  dialog.ts  invoke.ts  perf.ts  queryClient.ts  theme.ts  types.ts  updater.ts
src/pages/: PageView.tsx
src/store/: workspaceStore.ts
src/styles/: globals.css
(+14 files in other folders)
