[package]
name = "folio"
version = "0.1.0"
description = "Folio — local-first Notion-like desktop note app"
authors = ["Folio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
