[package]
name = "folio"
version = "0.2.3"
description = "Folio — local-first Notion-like desktop note app"
authors = ["Folio"]
edition = "2021"
rust-version = "1.77.2"
license = "Apache-2.0"

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
# M5: Import/Export — markdown parse (comrak), html parse (scraper), zip read/write, base64 IPC transfer
comrak = "0.52"
scraper = "0.26"
zip = "2"
base64 = "0.22"
url = "2"

[features]
# this feature is used for production builds or when `devUrl` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
